Реализована бизнес-логика над хранилищем S3. Были добавлены методы: - Получение списка файлов и директории по указанному пути - Фильтр по определенным атрибутам поиска - Получение более детальной информации по указанному файлу из пути - Получение списка файлов и директории при помощи поиска в указанному пути Так же был обновлен файл спецификации openapi.yaml под новые функции сервиса.
