# src/main/java/com/andreyk/practiceproject/api/dto/storage/StorageObjectDetailsRequest.java
@@ -1,0 +1,10 @@
+package com.andreyk.practiceproject.api.dto.storage;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class StorageObjectDetailsRequest {
+    String path;
+}
